samples/_failures_safe/1761166144_02f39f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2115c80b.c: In function ‘main’:
./samples/SAFE/__tmp_2115c80b.c:154:9: error: expected expression at end of input
  154 |         if (distances[i] ==
      |         ^~
./samples/SAFE/__tmp_2115c80b.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2115c80b.c:154:9: error: expected declaration or statement at end of input
